--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-spinners": "^0.8.1",
     "react-step-progress-bar": "^1.0.3"
   },
   "scripts": {
